@@ -1,6 +1,7 @@
 # Copyright (c) 2011 gocept gmbh & co. kg
 # See also LICENSE.txt
 
+import mock
 import pkg_resources
 import unittest
 import zeit.cms.testing
@@ -37,8 +38,51 @@ class ArchiveLayer(ArchiveZCMLLayer):
         del cls.config
 
 
+class BreadcrumbIndexTest(zeit.cms.testing.FunctionalTestCase):
+
+    layer = ArchiveLayer
+
+    def setUp(self):
+        super(BreadcrumbIndexTest, self).setUp()
+        from zeit.cms.repository.folder import Folder
+        self.repository['deutschland'] = Folder()
+        self.ressort_month = \
+                self.repository['deutschland']['2009-11'] = \
+            Folder()
+        self.repository['deutschland']['integration'] = Folder()
+        self.sub_ressort_month = \
+                self.repository['deutschland']['integration']['2009-06'] = \
+                Folder()
+
+    def get_article(self, **kw):
+        article = zeit.content.article.article.Article()
+        article.year = 2009
+        for key, value in kw.items():
+            setattr(article, key, value)
+        return article
+
+    def create(self, article):
+        from zeit.archive.breadcrumbindex import (
+                create_breadcrumb_index_on_publish)
+        create_breadcrumb_index_on_publish(article, mock.sentinel.event)
+
+    def test_should_not_create_on_name_ressort_missmatch_in_sub_ressort_folder(self):
+        article = self.get_article(ressort=u'International')
+        self.sub_ressort_month['art'] = article
+        self.create(article)
+        self.assertNotIn('index', self.ressort_month)
+        self.assertNotIn('index', self.sub_ressort_month)
+
+    def test_should_not_create_on_name_ressort_missmatch_in_ressort_folder(self):
+        article = self.get_article(ressort=u'International')
+        self.ressort_month['art'] = article
+        self.create(article)
+        self.assertNotIn('index', self.ressort_month)
+
+
 def test_suite():
     suite = unittest.TestSuite()
+    suite.addTest(unittest.makeSuite(BreadcrumbIndexTest))
     suite.addTest(zeit.cms.testing.FunctionalDocFileSuite(
         'breadcrumbindex.txt',
         layer=ArchiveLayer,
