@@ -4,7 +4,8 @@ zeit.archive changes
 0.9.2 (unreleased)
 ==================
 
-- Nothing changed yet.
+- Don't publish a breadcrumb index if the ressort or sub ressort does not match
+  the folder name (for #8996).
 
 
 0.9.1 (2011-07-29)
